stable version 1.10