@@ -4,84 +4,135 @@ import com.larrykin.snaptap.controllers.MainController;
 import com.larrykin.snaptap.utils.ThemeManager;
 import com.larrykin.snaptap.utils.TrayManager;
 import javafx.application.Application;
+import javafx.application.Platform;
 import javafx.fxml.FXMLLoader;
-import javafx.scene.Scene;
-import javafx.stage.Stage;
-import javafx.geometry.Insets;
 import javafx.geometry.Pos;
-import javafx.scene.Parent;
+import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
+import javafx.scene.control.Label;
 import javafx.scene.control.Tooltip;
+import javafx.scene.image.ImageView;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.VBox;
+import javafx.stage.Stage;
+import javafx.stage.StageStyle;
 import org.kordamp.ikonli.javafx.FontIcon;
 
 public class Main extends Application {
     private TrayManager trayManager;
-
-    /**
-     * The main entry point for all JavaFX applications.
-     * The start method is called after the init method has returned,
-     * and after the system is ready for the application to begin running.
-     *
-     * <p>
-     * NOTE: This method is called on the JavaFX Application Thread.
-     * </p>
-     *
-     * @param stage the primary stage for this application, onto which
-     *              the application scene can be set.
-     *              Applications may create other stages, if needed, but they will not be
-     *              primary stages.
-     * @throws Exception if something goes wrong
-     */
+    private double xOffset = 0;
+    private double yOffset = 0;
 
     @Override
     public void start(Stage stage) throws Exception {
         FXMLLoader fxmlLoader = new FXMLLoader(MainController.class.getResource("/fxml/Main.fxml"));
+        BorderPane root = fxmlLoader.load();
 
-        // Load the root node from FXML
-        Parent root = fxmlLoader.load();
+        // Get the top VBox from FXML
+        VBox topContainer = (VBox) root.getTop();
 
-        // Create a BorderPane as the new root container
-        BorderPane borderPane = new BorderPane();
-        borderPane.setCenter(root);
+        // Get the window bar (first row)
+        HBox windowBar = (HBox) topContainer.getChildren().get(0);
 
-        // Create toolbar for custom window buttons
-        HBox windowControls = new HBox(5);
-        windowControls.setAlignment(Pos.CENTER_RIGHT);
-        windowControls.setPadding(new Insets(5, 10, 5, 10));
+        // Create app icon and title
+        HBox titleBox = new HBox(5);
+        titleBox.setAlignment(Pos.CENTER_LEFT);
 
-        // Create theme button
+        // Create an icon container with background
+        StackPane iconContainer = new StackPane();
+        iconContainer.setStyle("-fx-background-color: #2A9D8F; -fx-background-radius: 3;");
+        iconContainer.setPrefSize(24, 24);
+        iconContainer.setMinSize(24, 24);
+        iconContainer.setMaxSize(24, 24);
+
+        // Add app icon
+        ImageView appIcon = new ImageView();
+        appIcon.setFitHeight(18);
+        appIcon.setFitWidth(18);
+        appIcon.setPreserveRatio(true);
+
+        // Load the image using input stream to avoid path issues
+        try {
+            appIcon.setImage(new javafx.scene.image.Image(getClass().getResourceAsStream("/images/logo.png")));
+            // Add icon to container
+            iconContainer.getChildren().add(appIcon);
+        } catch (Exception e) {
+            System.err.println("Could not load app icon: " + e.getMessage());
+        }
+
+        // Add app title
+        Label appTitle = new Label("SnapTap");
+        appTitle.getStyleClass().add("window-title");
+
+        titleBox.getChildren().addAll(iconContainer, appTitle);
+        windowBar.getChildren().add(0, titleBox);
+
+        // Create window control buttons
         Button themeButton = new Button();
         themeButton.setGraphic(new FontIcon("fas-adjust"));
         themeButton.setTooltip(new Tooltip("Toggle Theme"));
         themeButton.getStyleClass().add("window-button");
         themeButton.setOnAction(e -> ThemeManager.toggleTheme(stage.getScene()));
 
-        // Create help button
         Button helpButton = new Button();
         helpButton.setGraphic(new FontIcon("fas-question-circle"));
         helpButton.setTooltip(new Tooltip("Help"));
         helpButton.getStyleClass().add("window-button");
         helpButton.setOnAction(e -> showHelpDialog());
 
-        // Add buttons to the toolbar
-        windowControls.getChildren().addAll(themeButton, helpButton);
+        Button minimizeButton = new Button();
+        minimizeButton.setGraphic(new FontIcon("fas-minus"));
+        minimizeButton.setTooltip(new Tooltip("Minimize"));
+        minimizeButton.getStyleClass().add("window-button");
+        minimizeButton.setOnAction(e -> stage.setIconified(true));
 
-        // Add the toolbar to the top of the BorderPane
-        borderPane.setTop(windowControls);
+        Button maximizeButton = new Button();
+        maximizeButton.setGraphic(new FontIcon("fas-expand"));
+        maximizeButton.setTooltip(new Tooltip("Maximize"));
+        maximizeButton.getStyleClass().add("window-button");
+        maximizeButton.setOnAction(e -> {
+            if (stage.isMaximized()) {
+                stage.setMaximized(false);
+                maximizeButton.setGraphic(new FontIcon("fas-expand"));
+            } else {
+                stage.setMaximized(true);
+                maximizeButton.setGraphic(new FontIcon("fas-compress"));
+            }
+        });
 
-        // Create scene with the BorderPane as root
-        Scene scene = new Scene(borderPane, 800, 600);
-        scene.getRoot().setStyle("-fx-background-color: #212529;");
+        Button closeButton = new Button();
+        closeButton.setGraphic(new FontIcon("fas-times"));
+        closeButton.setTooltip(new Tooltip("Close"));
+        closeButton.getStyleClass().addAll("window-button", "close-button");
+        closeButton.setOnAction(e -> Platform.exit());
 
+        // Add window controls to the window bar
+        windowBar.getChildren().addAll(themeButton, helpButton, minimizeButton, maximizeButton, closeButton);
+
+        // Make the window draggable from the window bar
+        windowBar.setOnMousePressed(event -> {
+            xOffset = event.getSceneX();
+            yOffset = event.getSceneY();
+        });
+        windowBar.setOnMouseDragged(event -> {
+            stage.setX(event.getScreenX() - xOffset);
+            stage.setY(event.getScreenY() - yOffset);
+        });
+
+        // Create scene
+        Scene scene = new Scene(root, 1200, 600);
+
+        // Apply theme
         boolean isDarkMode = ThemeManager.loadThemeState();
         ThemeManager.applyTheme(scene, isDarkMode);
 
         stage.setTitle("SnapTap");
         stage.getIcons().add(new javafx.scene.image.Image(getClass().getResourceAsStream("/images/logo.png")));
         stage.setScene(scene);
+        stage.initStyle(StageStyle.UNDECORATED);
         stage.show();
 
         // Initialize system tray
@@ -100,8 +151,4 @@ public class Main extends Application {
     public static void main(String[] args) {
         launch(args);
     }
-
-    /**
-     * --module-path "C:\Program Files\Java\javafx-sdk-21.0.6\lib" --add-modules javafx.controls,javafx.fxml
-     * */
 }
